<resources>
    <string name="app_name">BASH</string>
    <string name="fb_app_id">306763223376191</string>
    <string name="google_maps_key">AIzaSyCZfRDhF1zwLRI-SqV3yR6cUKvQNWqh4U0</string>
    <string name="password">Password</string>
    <string name="phone_number_email_username">Phone number, email or username</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">" "Sign up.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="connect_with">Connect with</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_signing_in">" "Get help signing in.</string>
    <string name="or">OR</string>
    <string name="change_picture">Change Picture</string>
    <string name="tap">Tap " "Allow" " when prompted</string>
    <string name="sign_up_accept"><![CDATA[Sign Up & Accept]]></string>
    <string name="terms">By tapping Sign Up &amp; Accept , you acknowledge that you have read the Privacy Policy and agree to the Terms of services.</string>
    <string name="invalid_response_error">Got invalid response. Please try again!</string>
    <string name="something_went_wrong">Something went wrong. Please try again later.</string>
    <string name="no_internet_message">Please check your internet connection.</string>
    <string name="error_no_data">No Data Found</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_some_wrong">Something Went Wrong</string>
    <string name="gallery_permission_required">Gallery permission required to get file.</string>
    <string name="camera_permission_required">Camera permission required to use camera.</string>
    <string name="permission_not_granted_message">App needs all permissions to work normally.</string>
    <string name="select_your_option">Select your option</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="failed_to_capture_image">Failed to capture image.</string>
    <string name="failed_to_fetch">Failed to get file</string>
    <string name="take_photo">Take a selfie</string>
    <string name="choose_image"> Upload a face image</string>
    <string name="location_permission_required">Location permission required.</string>
    <string name="failed_to_get_location">Failed to get location. Please try after some time.</string>
    <string name="location_setting_unavailable">Location setting unavailable.</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="ok">OK</string>
    <string name="turn_on_gps">To get access for full functionality of app please turn on your gps.</string>
    <string name="continue_text">Continue</string>
    <string name="get_started">Get Started</string>
    <string name="enable_app_permissions_to">Enable app permissions to</string>
    <string name="make_sign_up_easy">make sign up easy</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="select_date_of_birth">Select your date of birth</string>
    <string name="what_s_your_birthday">What\'s your birthday?</string>
    <string name="birthday">Birthday</string>
    <string name="change_my_username">Change my username</string>
    <string name="your_username">Your username</string>
    <string name="pick_a_username">Pick a username</string>
    <string name="your_username_msg">your username is how friends add you on</string>
    <string name="username">UserName</string>
    <string name="suggested_username">Suggested Username</string>
    <string name="username_unavailable">Username unavailable</string>
    <string name="set_a_password">Set a password</string>
    <string name="password_msg">Your password should be at least 8 characters</string>
    <string name="enter_username">Enter username</string>
    <string name="what_s_your_mobile_number">What\'s your mobile number?</string>
    <string name="sign_up_with_email_instead">Sign up with email instead</string>
    <string name="mobile_number">Mobile number</string>
    <string name="defalut_code">US +1</string>
    <string name="sms_verification_code">We\'ll send you an SMS verification code.</string>
    <string name="number_validation">Invalid phone number</string>
    <string name="what_s_your_email_address">What\'s your email address?</string>
    <string name="sign_up_with_phone_instead">Sign up with phone instead</string>
    <string name="email">Email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="code">Code</string>
    <string name="enter_valid_code">Enter valid code</string>
    <string name="reg_success">Congratulations!! You has registered successfully.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_success">Your password has reset successfully.</string>
    <string name="enter_no_email_name">Enter your number, email or username</string>
    <string name="enter_password">Enter password</string>
    <string name="want_to_logout">Are you sure you want to LOGOUT?</string>
    <string name="_yes">Yes</string>
    <string name="_no">No</string>
    <string name="session_expired">Your session has been expired. Please login again.</string>
    <string name="prompt_hosted">Hosted</string>
    <string name="prompt_attended">Attended</string>
    <string name="prompt_followers">Followers</string>
    <string name="prompt_following">Following</string>
    <string name="prompt_profile">Profile</string>
    <string name="your_info">Your Info</string>
    <string name="bash_rating">Rating</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_selfie">Choose your selfie</string>
    <string name="choose_your_outfit">Choose your outfit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="private_information"><u>Private Information</u></string>
    <string name="email_address">E-mail Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Your Address</string>
    <string name="gender">Gender</string>
    <string name="done">Done</string>
    <string name="selfie_msg">This is how your selfie\nwill appear in BASH</string>
    <string name="male">Male</string>
    <string name="not_specified">Not Specified</string>
    <string name="female">Female</string>
    <string name="want_to_update">Do you want to update :</string>
    <string name="none_of_above">None of above</string>
    <string name="enter_address">Enter address</string>
    <string name="profile_update_success">Your profile has been updated successfully.</string>
    <string name="cancel_update_msg">You have unsaved changes. Do you want to update profile details?</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="allow_prompted">Tap \"Allow\" when prompted</string>
    <string name="bash_reg_mobile_number">What\'s your BASH registered mobile number?</string>
    <string name="snap_tag">Link your Snapchat to connect with your Bitmoji</string>
    <string name="connect_to_snapchat">Connect to Snapchat</string>
    <string name="skip">Skip</string>
    <string name="login_option">Login Option</string>
    <string name="login_with_email">Login with Email</string>
    <string name="email_msg">A code will be sent to email registered with BASH account</string>
    <string name="login_with_number">Login with Phone Number</string>
    <string name="login_with_number1">Login with Phone Number</string>
    <string name="number_msg">A code will be sent to phone number registered with BASH account</string>
    <string name="bash_reg_email">What\'s your BASH registered email address?</string>
    <string name="code_not_verified">The code you entered could not be verified. Resend?</string>
    <string name="incorrect_code">Incorrect Code</string>
    <string name="enter_the_code_we_send_to">Enter the code we send to</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_facebook1">Login with Facebook</string>
    <string name="throw_a">Throw a</string>
    <string name="choose_your_bash">Choose your bash</string>
    <string name="make_it_private">Make it private</string>
    <string name="event_name">Event Name</string>
    <string name="hosts">Hosts</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="location">Location</string>
    <string name="cover_charge">Cover Charge</string>
    <string name="age_limit">Age Limit</string>
    <string name="min_age">18</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="share">Share</string>
    <string name="create">Create</string>
    <string name="plus">+</string>
    <string name="google_service_error">Your device is not supportive with google play services.</string>
    <string name="install_fb_app">Please install facebook app first.</string>
    <string name="your_followers">Your Followers</string>
    <string name="send_invitations">Send Invitations</string>
    <string name="install_messenger">Please install facebook messenger app first.</string>
    <string name="failed_to_find_msg_app">Failed to find message app.</string>
    <string name="enter_event_name">Enter event name</string>
    <string name="enter_host_name">Enter host name</string>
    <string name="select_event_date">Select event date</string>
    <string name="select_start_time">Select start time</string>
    <string name="select_end_time">Select end time</string>
    <string name="pick_event_location">Pick event location</string>
    <string name="enter_cover_charge">Enter cover charge</string>
    <string name="min_age_limit_msg">Minimum age should be greater than or equals to 15</string>
    <string name="max_age_limit_msg">Maximum age should be greater than minimum age</string>
    <string name="event_create_success">Bash has been created successfully.</string>
    <string name="event_update_success">Bash has been updated successfully.</string>
    <string name="crash_the">Attend This</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="time">Time</string>
    <string name="cover">Cover :</string>
    <string name="factor">Factor</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="serving_size">Serving size</string>
    <string name="new_email_address">New email address</string>
    <string name="submit">Submit</string>
    <string name="new_mobile_number">New mobile number</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="miles">mi</string>
    <string name="current_time_error">Selected time should be greater than current time</string>
    <string name="end_date">End date</string>
    <string name="select_event_start_date">Select event start date</string>
    <string name="select_event_end_date">Select event end date</string>
    <string name="end_date_msg">End date should be equals or greater than start date</string>
    <string name="invalid_end_time">Select valid end time</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_paypal_id">Enter Paypal Details</string>
    <string name="number_or_email">Email or Number</string>
    <string name="paypal_name">Paypal Name</string>
    <string name="sing_up">Sign Up</string>
</resources>