<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backIV"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_margin="@dimen/_10sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/custom_pink_back_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_option"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/custom_light_purple_button"
                android:text="@string/login_with_email"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvEmailMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/email_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_margin="@dimen/_30sdp"
                android:background="@color/gray" />

            <Button
                android:id="@+id/btNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:background="@drawable/custom_light_purple_button"
                android:text="@string/login_with_number"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/tvPhoneMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/number_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </LinearLayout>
    </LinearLayout>
</layout>