<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/ivBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_15sdp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_90sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/bash_icon_192" />

            <ImageView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:contentDescription="@string/app_name"
                android:background="@drawable/asset_1bash_icon_1024_pink_bg" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/custom_edittext"
                android:gravity="center"
                android:hint="@string/phone_number_email_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="@dimen/_8sdp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/custom_edittext"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:visibility="gone" />

            <Button
                android:id="@+id/loginBT"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/custom_blue_button"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/log_in"
                android:textStyle="bold"
                android:textColor="@color/purple"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/forgot_your_login_details"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/tvForgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_help_signing_in"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <View
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/or"
                    android:textStyle="bold"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="2dp"
                    android:background="@color/gray" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_with"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/snapchatIV"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:background="@drawable/snap_iconasset_9xxxhdpi" />

                <RelativeLayout
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/facebookBT"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:background="@color/black"
                        android:padding="@dimen/_10sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/transparent" />

                    <ImageView
                        android:id="@+id/fbIV"
                        android:layout_width="@dimen/_35sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/facebook_iconasset_11xxxhdpi" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/signUP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/ivNumber"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/custom_light_purple_button"
                android:gravity="center"
                android:text="@string/login_with_number1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/ivFacebook"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_5sdp"
                android:background="@drawable/custom_fb_button"
                android:gravity="center"
                android:text="@string/login_with_facebook1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/tvTrouble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/trouble_logging_in"
                android:textColor="@color/darkpurple"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/ivNumberSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/sing_up"
                android:textColor="@color/darkpurple"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>
    </RelativeLayout>
</layout>