<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        tools:context=".activity.GetStartedActivity">

        <ProgressBar
            android:id="@+id/pBar"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_7sdp"
            android:max="100"
            android:progress="25"
            android:progressDrawable="@drawable/custom_signup_progress" />

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_10sdp"
            android:layout_below="@id/pBar"
            android:contentDescription="@string/app_name"
            android:src="@drawable/custom_pink_back_selector" />

        <ImageView
            android:id="@+id/bashIV"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_below="@id/pBar"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/bash_icon_192" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/contiBT"
            android:layout_below="@+id/bashIV"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/what_s_your_mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:text="@string/sign_up_with_email_instead"
                android:textColor="@color/skybluedark"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/mobile_number"
                android:textAllCaps="true"
                android:textColor="@color/skybluedark"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_grays"
                    android:focusable="false"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/defalut_code"
                    android:textColor="#3b0e49" />

                <EditText
                    android:id="@+id/etNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_grays"
                    android:inputType="number"
                    android:maxLength="12"
                    android:padding="@dimen/_10sdp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/sms_verification_code"
                android:textColor="@color/black_light"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>

        <Button
            android:id="@+id/contiBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/custom_grays_button"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />
    </RelativeLayout>
</layout>