<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/custom_corner_trasparent_background"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_17sdp"
                android:gravity="center"
                android:text="@string/enter_paypal_id"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/paypal_name"
                android:inputType="textCapWords"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/number_or_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="@dimen/_220sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/custom_light_purple_button"
                android:gravity="center"
                android:padding="@dimen/_13sdp"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</layout>